--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lalezar&family=Lato:wght@300;400;900&family=Libre+Barcode+128+Text&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
