--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -27,16 +27,37 @@
     );
   }
 
-  .scrolling {
-    animation: scrollText 2s infinite linear;
-  }
-}
+  .custom-clip-path {
+    -webkit-clip-path: polygon(
+      0% 100%,
+      100% 100%,
+      100% 0%,
+      85% 0,
+      76% 8%,
+      67% 3%,
+      58% 6%,
+      46% 5%,
+      36% 10%,
+      28% 4%,
+      20% 8%,
+      15% 0,
+      0% 0%
+    );
 
-@keyframes scrollText {
-  from {
-    transform: translateX(0%);
-  }
-  to {
-    transform: translateX(-50%);
+    clip-path: polygon(
+      0% 100%,
+      100% 100%,
+      100% 0%,
+      85% 0,
+      76% 8%,
+      67% 3%,
+      58% 6%,
+      46% 5%,
+      36% 10%,
+      28% 4%,
+      20% 8%,
+      15% 0,
+      0% 0%
+    );
   }
 }
